Static classes and class items changes to non static. Object instances created where needed. Small bug fixes. Visual studio first commit.

--- a/Quiz_Console/Quiz_Console.csproj
+++ b/Quiz_Console/Quiz_Console.csproj
@@ -5,11 +5,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <ApplicationIcon>favicon(2).ico</ApplicationIcon>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="favicon(2).ico" />
+    <Content Include="favicon.ico" />
   </ItemGroup>
 
   <ItemGroup>
