Place business logic in a separate Class Library
Separates UI from Business logic. Puts Business logic in a separate Class Library.
Replaces Array List with a generic List where possible.
Adds automatic documentation to the methods.
Removes static classes and members and replace them with a proper classes.
Places high level UI classes in a separate Class library.
All class libraries targeting .NET Standard 2.0 for maximum compatibility accross .NET framework and .NET.

--- a/Quiz_Console/Quiz_Console.csproj
+++ b/Quiz_Console/Quiz_Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -14,6 +14,11 @@
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ConsoleUIHelpers\ConsoleUIHelpers.csproj" />
+    <ProjectReference Include="..\QuizLibrary\QuizLibrary.csproj" />
   </ItemGroup>
 
 </Project>
