Console app ui bug fixes
Fixed user input, question and answer input and pick user menu. Now the input processing correctly.
Fixed platform specific Console.Beep issue. Now the library determines teh OS and Beeps only on Windows.
Fixed naming issues accross the project.

--- a/QuizTest/ModelsTest.csproj
+++ b/QuizTest/ModelsTest.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\QuizLibrary\QuizLibrary.csproj" />
+    <ProjectReference Include="..\QuizLibrary\Models.csproj" />
   </ItemGroup>
 
 </Project>
