--- a/Quiz_Console/Properties/launchSettings.json
+++ b/Quiz_Console/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Quiz_Console": {
-      "commandName": "Project",
-      "commandLineArgs": "-p"
+      "commandName": "Project"
     }
   }
 }
