Adds XUnit Tests to the project
Tests covered QuestionWithAnswers class in the Class Library.
Small naming issues fixed.

--- a/Quiz_Console/Quiz_Console.csproj
+++ b/Quiz_Console/Quiz_Console.csproj
@@ -33,7 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ConsoleUIHelpers\UIHelpers.csproj" />
-    <ProjectReference Include="..\QuizLibrary\Models.csproj" />
+    <ProjectReference Include="..\QuizLibrary\ModelsLibrary.csproj" />
   </ItemGroup>
 
 </Project>
