--- a/QuizTest/ModelsTest.csproj
+++ b/QuizTest/ModelsTest.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\QuizLibrary\Models.csproj" />
+    <ProjectReference Include="..\QuizLibrary\ModelsLibrary.csproj" />
   </ItemGroup>
 
 </Project>
