Separates UI from the core logic
Utility class and Console UI class places in a separate ConaleUserInterface Library.

--- a/Quiz_Console/Quiz.csproj
+++ b/Quiz_Console/Quiz.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConsoleUIHelpers\UIHelpersLibrary.csproj" />
+    <ProjectReference Include="..\ConsoleUIHelpers\ConsoleUIHelpersLibrary.csproj" />
     <ProjectReference Include="..\QuizLibrary\ModelsLibrary.csproj" />
   </ItemGroup>
 
