--- a/ConsoleUIHelpers/ConsoleUIHelpersLibrary.csproj
+++ b/ConsoleUIHelpers/ConsoleUIHelpersLibrary.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QuizLibrary\ModelsLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
