Fixes folder naming issues
Renamed folders and fixed references in solution file.
Minor code improvements with Window Title.

--- a/ModelsLibraryTests/ModelsLibraryTests.csproj
+++ b/ModelsLibraryTests/ModelsLibraryTests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\QuizLibrary\ModelsLibrary.csproj" />
+    <ProjectReference Include="..\ModelsLibrary\ModelsLibrary.csproj" />
   </ItemGroup>
 
 </Project>
