--- a/ConsoleUIHelpersLibrary/ConsoleUIHelpersLibrary.csproj
+++ b/ConsoleUIHelpersLibrary/ConsoleUIHelpersLibrary.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\QuizLibrary\ModelsLibrary.csproj" />
+    <ProjectReference Include="..\ModelsLibrary\ModelsLibrary.csproj" />
   </ItemGroup>
 
 </Project>
