--- a/Quiz/Properties/launchSettings.json
+++ b/Quiz/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Quiz_Console": {
       "commandName": "Project",
-      "commandLineArgs": "-p"
+      "commandLineArgs": "--database"
     }
   }
 }
