--- a/QuizGameConsole/QuizGameConsole.csproj
+++ b/QuizGameConsole/QuizGameConsole.csproj
@@ -28,14 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="30.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ConsoleUIHelpersLibrary\ConsoleUIHelpersLibrary.csproj" />
-    <ProjectReference Include="..\ModelsLibrary\ModelsLibrary.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\UIHelpers\UIHelpers.csproj" />
   </ItemGroup>
 
 </Project>
